@@ -1,25 +1,23 @@
 package dk.kvalitetsit.hjemmebehandling.service;
 
-import dk.kvalitetsit.hjemmebehandling.constants.Systems;
-import dk.kvalitetsit.hjemmebehandling.constants.errors.ErrorDetails;
-import dk.kvalitetsit.hjemmebehandling.fhir.FhirClient;
-import dk.kvalitetsit.hjemmebehandling.fhir.FhirLookupResult;
-import dk.kvalitetsit.hjemmebehandling.fhir.FhirMapper;
-import dk.kvalitetsit.hjemmebehandling.model.QuestionnaireModel;
-import dk.kvalitetsit.hjemmebehandling.model.question.QuestionModel;
-import dk.kvalitetsit.hjemmebehandling.service.access.AccessValidator;
+import dk.kvalitetsit.hjemmebehandling.model.constants.QuestionnaireStatus;
+import dk.kvalitetsit.hjemmebehandling.model.constants.Systems;
+import dk.kvalitetsit.hjemmebehandling.model.constants.errors.ErrorDetails;
+import dk.kvalitetsit.hjemmebehandling.model.*;
+import dk.kvalitetsit.hjemmebehandling.repository.CarePlanRepository;
+import dk.kvalitetsit.hjemmebehandling.repository.PlanDefinitionRepository;
+import dk.kvalitetsit.hjemmebehandling.repository.QuestionnaireRepository;
 import dk.kvalitetsit.hjemmebehandling.service.exception.AccessValidationException;
 import dk.kvalitetsit.hjemmebehandling.service.exception.ErrorKind;
 import dk.kvalitetsit.hjemmebehandling.service.exception.ServiceException;
-import org.hl7.fhir.r4.model.Bundle;
-import org.hl7.fhir.r4.model.CarePlan;
+import dk.kvalitetsit.hjemmebehandling.service.implementation.ConcreteQuestionnaireService;
 import org.hl7.fhir.r4.model.Enumerations;
-import org.hl7.fhir.r4.model.Questionnaire;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
+import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
@@ -33,20 +31,26 @@ import static org.mockito.ArgumentMatchers.any;
 
 @ExtendWith(MockitoExtension.class)
 public class QuestionnaireServiceTest {
-    private static final String QUESTIONNAIRE_ID_1 = "Questionnaire/questionnaire-1";
+
+    private static final QualifiedId.QuestionnaireId QUESTIONNAIRE_ID_1 = new QualifiedId.QuestionnaireId("questionnaire-1");
+
     @InjectMocks
-    private QuestionnaireService subject;
+    private ConcreteQuestionnaireService subject;
+
     @Mock
-    private FhirClient fhirClient;
+    private QuestionnaireRepository<QuestionnaireModel> questionnaireRepository;
+
     @Mock
-    private FhirMapper fhirMapper;
+    private CarePlanRepository<CarePlanModel, PatientModel> careplanRepository;
+
     @Mock
-    private AccessValidator accessValidator;
+    private PlanDefinitionRepository<PlanDefinitionModel> plandefinitionRepository;
+
 
     private static Stream<Arguments> updateQuestionnaire_illegalStatusChange_throwsException() {
-        Map<Enumerations.PublicationStatus, List<Enumerations.PublicationStatus>> valid = new HashMap<>();
-        valid.put(Enumerations.PublicationStatus.ACTIVE, List.of(Enumerations.PublicationStatus.ACTIVE, Enumerations.PublicationStatus.RETIRED));
-        valid.put(Enumerations.PublicationStatus.DRAFT, List.of(Enumerations.PublicationStatus.DRAFT, Enumerations.PublicationStatus.ACTIVE));
+        Map<QuestionnaireStatus, List<QuestionnaireStatus>> valid = new HashMap<>();
+        valid.put(QuestionnaireStatus.ACTIVE, List.of(QuestionnaireStatus.ACTIVE, QuestionnaireStatus.RETIRED));
+        valid.put(QuestionnaireStatus.DRAFT, List.of(QuestionnaireStatus.DRAFT, QuestionnaireStatus.ACTIVE));
 
         // compute and add illegal status changes
         Stream.Builder<Arguments> argumentBuilder = Stream.builder();
@@ -63,14 +67,15 @@ public class QuestionnaireServiceTest {
     }
 
     @Test
-    public void getQuestionnairesById_sucecss() throws Exception {
-        Questionnaire questionnaire = buildQuestionnaire();
-        FhirLookupResult lookupResult = FhirLookupResult.fromResource(questionnaire);
-        Mockito.when(fhirClient.lookupQuestionnairesById(List.of(QUESTIONNAIRE_ID_1))).thenReturn(lookupResult);
+    public void getQuestionnairesById_success() throws Exception {
+        QuestionnaireModel questionnaire = QuestionnaireModel.builder()
+                .id(QuestionnaireServiceTest.QUESTIONNAIRE_ID_1)
+                .status(QuestionnaireStatus.ACTIVE)
+                .build();
 
-        QuestionnaireModel questionnaireModel = new QuestionnaireModel();
-        Mockito.when(fhirMapper.mapQuestionnaire(questionnaire)).thenReturn(questionnaireModel);
+        Mockito.when(questionnaireRepository.fetch(List.of(QUESTIONNAIRE_ID_1))).thenReturn(List.of(questionnaire));
 
+        QuestionnaireModel questionnaireModel = QuestionnaireModel.builder().build();
         Optional<QuestionnaireModel> result = subject.getQuestionnaireById(QUESTIONNAIRE_ID_1);
 
         assertTrue(result.isPresent());
@@ -79,23 +84,16 @@ public class QuestionnaireServiceTest {
 
     @Test
     public void getQuestionnairesById_notFound() throws Exception {
-        FhirLookupResult emptyLookupResult = FhirLookupResult.fromBundle(new Bundle());
-        Mockito.when(fhirClient.lookupQuestionnairesById(List.of(QUESTIONNAIRE_ID_1))).thenReturn(emptyLookupResult);
-
+        Mockito.when(questionnaireRepository.fetch(List.of(QUESTIONNAIRE_ID_1))).thenReturn(List.of());
         Optional<QuestionnaireModel> result = subject.getQuestionnaireById(QUESTIONNAIRE_ID_1);
-
         assertTrue(result.isEmpty());
     }
 
     @Test
     public void getQuestionnaires_success() throws Exception {
-        Questionnaire questionnaire = new Questionnaire();
-        QuestionnaireModel questionnaireModel = new QuestionnaireModel();
-        FhirLookupResult lookupResult = FhirLookupResult.fromResource(questionnaire);
-
-        Mockito.when(fhirClient.lookupQuestionnairesByStatus(Collections.emptyList())).thenReturn(lookupResult);
-        Mockito.when(fhirMapper.mapQuestionnaire(questionnaire)).thenReturn(questionnaireModel);
-
+        QuestionnaireModel questionnaireModel = QuestionnaireModel.builder().build();
+        List<String> statuses = List.of();
+        Mockito.when(questionnaireRepository.fetch(statuses)).thenReturn(List.of(questionnaireModel));
         List<QuestionnaireModel> result = subject.getQuestionnaires(Collections.emptyList());
 
         assertEquals(1, result.size());
@@ -104,30 +102,40 @@ public class QuestionnaireServiceTest {
 
     @Test
     public void createQuestionnaire_success() throws Exception {
-        QuestionnaireModel questionnaireModel = buildQuestionnaireModel();
-        Mockito.when(fhirClient.saveQuestionnaire(any())).thenReturn("1");
-        String result = subject.createQuestionnaire(questionnaireModel);
-        assertEquals("1", result);
+        QuestionnaireModel questionnaireModel = QuestionnaireModel.builder().build();
+        var id = new QualifiedId.QuestionnaireId("1");
+        Mockito.when(questionnaireRepository.save(Mockito.any(QuestionnaireModel.class))).thenReturn(id);
+
+        QualifiedId.QuestionnaireId result = subject.createQuestionnaire(questionnaireModel);
+
+        assertEquals(id, result);
     }
 
     @Test
     public void createQuestionnaire_questionLinkId_isSetToRandomUuid_ifNull() throws Exception {
         String linkId = "This should be ignored by the system as it contains a value";
         String nullLinkId = null; // this should trigger the system to set new random uuid with prefix 'urn:uuid'";
-        QuestionnaireModel questionnaireModel = buildQuestionnaireModel();
-        questionnaireModel.setQuestions(List.of(buildQuestionModel(linkId), buildQuestionModel(nullLinkId)));
-        questionnaireModel.setCallToAction(buildQuestionModel(nullLinkId));
-        Mockito.when(fhirClient.saveQuestionnaire(any())).thenReturn("1");
+        QuestionnaireModel questionnaireModel = QuestionnaireModel.builder()
+                .questions(List.of(buildQuestionModel(linkId), buildQuestionModel(nullLinkId)))
+                .callToAction(buildQuestionModel(nullLinkId))
+                .build();
 
-        String result = subject.createQuestionnaire(questionnaireModel);
 
-        assertEquals("1", result);
-        assertEquals(2, questionnaireModel.getQuestions().size());
-        assertTrue(questionnaireModel.getQuestions().stream().anyMatch(q -> q.getLinkId().equals(linkId)));
-        assertTrue(questionnaireModel.getQuestions().stream().anyMatch(q -> q.getLinkId().startsWith("urn:uuid")));
-        assertTrue(questionnaireModel.getQuestions().stream().noneMatch(q -> q.getLinkId().equals(nullLinkId)));
-        assertNotNull(questionnaireModel.getCallToAction());
-        assertEquals(Systems.CALL_TO_ACTION_LINK_ID, questionnaireModel.getCallToAction().getLinkId());
+        subject.createQuestionnaire(questionnaireModel);
+
+        // Assert
+        ArgumentCaptor<QuestionnaireModel> captor = ArgumentCaptor.forClass(QuestionnaireModel.class);
+
+        questionnaireModel = captor.getValue();
+
+        assertEquals(2, questionnaireModel.questions().size());
+        assertTrue(questionnaireModel.questions().stream().anyMatch(q -> q.linkId().equals(linkId)));
+        assertTrue(questionnaireModel.questions().stream().anyMatch(q -> q.linkId().startsWith("urn:uuid")));
+        assertTrue(questionnaireModel.questions().stream().noneMatch(q -> q.linkId().equals(nullLinkId)));
+
+        assertNotNull(questionnaireModel.callToAction());
+        assertEquals(Systems.CALL_TO_ACTION_LINK_ID, questionnaireModel.callToAction().linkId());
+
     }
 
     @Test
@@ -135,24 +143,22 @@ public class QuestionnaireServiceTest {
         String newTitle = "new title";
         String newDescription = "new description";
         String newStatus = "ACTIVE";
-        List<QuestionModel> newQuestions = List.of(new QuestionModel());
-        QuestionModel newCallToAction = new QuestionModel();
+        List<QuestionModel> newQuestions = List.of(buildQuestionModel());
+        QuestionModel newCallToAction = buildQuestionModel();
 
-        Questionnaire questionnaire = buildQuestionnaire();
-        FhirLookupResult lookupResult = FhirLookupResult.fromResource(questionnaire);
-        Mockito.when(fhirClient.lookupQuestionnairesById(List.of(QUESTIONNAIRE_ID_1))).thenReturn(lookupResult);
+        QuestionnaireModel questionnaire = QuestionnaireModel.builder().build();
+        Mockito.when(questionnaireRepository.fetch(List.of(QUESTIONNAIRE_ID_1))).thenReturn(List.of(questionnaire));
 
-        QuestionnaireModel questionnaireModel = new QuestionnaireModel();
-        Mockito.when(fhirMapper.mapQuestionnaire(questionnaire)).thenReturn(questionnaireModel);
+        QuestionnaireModel questionnaireModel = QuestionnaireModel.builder().build();
 
         subject.updateQuestionnaire(QUESTIONNAIRE_ID_1, newTitle, newDescription, newStatus, newQuestions, newCallToAction);
 
-        assertEquals(newTitle, questionnaireModel.getTitle());
-        assertEquals(newDescription, questionnaireModel.getDescription());
-        assertEquals(newStatus, questionnaireModel.getStatus().toString());
-        assertEquals(newQuestions.size(), questionnaireModel.getQuestions().size());
-        assertEquals(newQuestions.getFirst(), questionnaireModel.getQuestions().getFirst());
-        assertEquals(newCallToAction, questionnaireModel.getCallToAction());
+        assertEquals(newTitle, questionnaireModel.title());
+        assertEquals(newDescription, questionnaireModel.description());
+        assertEquals(newStatus, questionnaireModel.status().toString());
+        assertEquals(newQuestions.size(), questionnaireModel.questions().size());
+        assertEquals(newQuestions.getFirst(), questionnaireModel.questions().getFirst());
+        assertEquals(newCallToAction, questionnaireModel.callToAction());
     }
 
     @Test
@@ -161,68 +167,73 @@ public class QuestionnaireServiceTest {
         String newStatus = "ACTIVE";
         List<QuestionModel> newQuestions = List.of(buildQuestionModel(linkId));
         QuestionModel newCallToAction = buildQuestionModel(linkId);
-        Questionnaire questionnaire = buildQuestionnaire();
-        FhirLookupResult lookupResult = FhirLookupResult.fromResource(questionnaire);
-        Mockito.when(fhirClient.lookupQuestionnairesById(List.of(QUESTIONNAIRE_ID_1))).thenReturn(lookupResult);
-        QuestionnaireModel questionnaireModel = new QuestionnaireModel();
-        Mockito.when(fhirMapper.mapQuestionnaire(questionnaire)).thenReturn(questionnaireModel);
+        QuestionnaireModel questionnaire = QuestionnaireModel.builder().build();
+        Mockito.when(questionnaireRepository.fetch(List.of(QUESTIONNAIRE_ID_1))).thenReturn(List.of(questionnaire));
+        QuestionnaireModel questionnaireModel = QuestionnaireModel.builder().build();
 
         subject.updateQuestionnaire(QUESTIONNAIRE_ID_1, null, null, newStatus, newQuestions, newCallToAction);
 
-        assertEquals(1, questionnaireModel.getQuestions().size());
-        assertNotNull(questionnaireModel.getQuestions().getFirst().getLinkId());
-        assertTrue(questionnaireModel.getQuestions().getFirst().getLinkId().startsWith("urn:uuid"));
-        assertNotNull(questionnaireModel.getCallToAction());
-        assertEquals(Systems.CALL_TO_ACTION_LINK_ID, questionnaireModel.getCallToAction().getLinkId());
+        assertEquals(1, questionnaireModel.questions().size());
+        assertNotNull(questionnaireModel.questions().getFirst().linkId());
+        assertTrue(questionnaireModel.questions().getFirst().linkId().startsWith("urn:uuid"));
+        assertNotNull(questionnaireModel.callToAction());
+        assertEquals(Systems.CALL_TO_ACTION_LINK_ID, questionnaireModel.callToAction().linkId());
     }
 
+    // TODO: May be moved into another test suite since this refers to accessibility
     @Test
     public void updateQuestionnaire_accessViolation_throwsException() throws Exception {
-        Questionnaire questionnaire = buildQuestionnaire();
-        FhirLookupResult lookupResult = FhirLookupResult.fromResource(questionnaire);
-        Mockito.when(fhirClient.lookupQuestionnairesById(List.of(QUESTIONNAIRE_ID_1))).thenReturn(lookupResult);
-        Mockito.doThrow(AccessValidationException.class).when(accessValidator).validateAccess(questionnaire);
+        QuestionnaireModel questionnaire = QuestionnaireModel.builder().build();
+
+        Mockito.when(questionnaireRepository.fetch(List.of(QUESTIONNAIRE_ID_1))).thenReturn(List.of(questionnaire));
         assertThrows(AccessValidationException.class, () -> subject.updateQuestionnaire(QUESTIONNAIRE_ID_1, null, null, null, null, null));
     }
 
     @Test
     public void updateQuestionnaire_questionnaireNotFound_throwsException() throws Exception {
-        FhirLookupResult emptyLookupResult = FhirLookupResult.fromBundle(new Bundle());
-        Mockito.when(fhirClient.lookupQuestionnairesById(List.of(QUESTIONNAIRE_ID_1))).thenReturn(emptyLookupResult);
+        Mockito.when(questionnaireRepository.fetch(List.of(QUESTIONNAIRE_ID_1))).thenReturn(List.of());
         assertThrows(ServiceException.class, () -> subject.updateQuestionnaire(QUESTIONNAIRE_ID_1, null, null, null, null, null));
     }
 
     @ParameterizedTest
     @MethodSource // arguments comes from a method that is name the same as the test
-    public void updateQuestionnaire_illegalStatusChange_throwsException(Enumerations.PublicationStatus currentStatus, Enumerations.PublicationStatus newStatus) throws Exception {
+    public void updateQuestionnaire_illegalStatusChange_throwsException(QuestionnaireStatus currentStatus, Enumerations.PublicationStatus newStatus) throws Exception {
         String newStatusParam = newStatus.toString();
-        Questionnaire questionnaire = buildQuestionnaire(currentStatus);
-        FhirLookupResult lookupResult = FhirLookupResult.fromResource(questionnaire);
-        Mockito.when(fhirClient.lookupQuestionnairesById(List.of(QUESTIONNAIRE_ID_1))).thenReturn(lookupResult);
+        QuestionnaireModel questionnaire = QuestionnaireModel
+                .builder()
+                .status(currentStatus)
+                .build();
+
+        Mockito.when(questionnaireRepository.fetch(List.of(QUESTIONNAIRE_ID_1))).thenReturn(List.of(questionnaire));
         assertThrows(ServiceException.class, () -> subject.updateQuestionnaire(QUESTIONNAIRE_ID_1, null, null, newStatusParam, null, null));
     }
 
     @Test
     public void retireQuestionnaire_noActiveCarePlanReferences_isRetired() throws ServiceException {
-        String id = "questionnaire-1";
-        Questionnaire questionnaire = buildQuestionnaire(Enumerations.PublicationStatus.ACTIVE);
-        FhirLookupResult lookupResult = FhirLookupResult.fromResources(questionnaire);
-        Mockito.when(fhirClient.lookupQuestionnairesById(List.of(QUESTIONNAIRE_ID_1))).thenReturn(lookupResult);
-        Mockito.when(fhirClient.lookupActiveCarePlansWithQuestionnaire(QUESTIONNAIRE_ID_1)).thenReturn(lookupResult);
-        subject.retireQuestionnaire(id);
-        assertEquals(Enumerations.PublicationStatus.RETIRED, questionnaire.getStatus());
+        QuestionnaireModel questionnaire = QuestionnaireModel.builder()
+                .id(QuestionnaireServiceTest.QUESTIONNAIRE_ID_1)
+                .status(QuestionnaireStatus.ACTIVE)
+                .build();
+
+        Mockito.when(questionnaireRepository.fetch(List.of(QUESTIONNAIRE_ID_1))).thenReturn(List.of(questionnaire));
+        Mockito.when(careplanRepository.fetchActiveCarePlansByQuestionnaireId(QUESTIONNAIRE_ID_1)).thenReturn(List.of());
+        subject.retireQuestionnaire(QUESTIONNAIRE_ID_1);
+        assertEquals(QuestionnaireStatus.RETIRED, questionnaire.status());
     }
 
     @Test
     public void retirePlanDefinition_activeCarePlanReferences_throwsError() throws ServiceException {
-        String id = "questionnaire-1";
-        Questionnaire questionnaire = buildQuestionnaire(Enumerations.PublicationStatus.ACTIVE);
-        CarePlan activeCarePlan = new CarePlan();
-        FhirLookupResult lookupResult = FhirLookupResult.fromResources(questionnaire, activeCarePlan);
-        Mockito.when(fhirClient.lookupQuestionnairesById(List.of(QUESTIONNAIRE_ID_1))).thenReturn(lookupResult);
-        Mockito.when(fhirClient.lookupActiveCarePlansWithQuestionnaire(QUESTIONNAIRE_ID_1)).thenReturn(lookupResult);
+        QuestionnaireModel questionnaire = QuestionnaireModel.builder()
+                .id(QuestionnaireServiceTest.QUESTIONNAIRE_ID_1)
+                .status(QuestionnaireStatus.ACTIVE)
+                .build();
+
+        CarePlanModel activeCarePlan = CarePlanModel.builder().build();
+
+        Mockito.when(questionnaireRepository.fetch(List.of(QUESTIONNAIRE_ID_1))).thenReturn(List.of(questionnaire));
+        Mockito.when(careplanRepository.fetchActiveCarePlansByQuestionnaireId(QUESTIONNAIRE_ID_1)).thenReturn(List.of(activeCarePlan));
         try {
-            subject.retireQuestionnaire(id);
+            subject.retireQuestionnaire(QUESTIONNAIRE_ID_1);
             fail();
         } catch (ServiceException se) {
             assertEquals(ErrorKind.BAD_REQUEST, se.getErrorKind());
@@ -230,24 +241,19 @@ public class QuestionnaireServiceTest {
         }
     }
 
-    private Questionnaire buildQuestionnaire() {
-        return buildQuestionnaire(Enumerations.PublicationStatus.ACTIVE);
-    }
 
-    private Questionnaire buildQuestionnaire(Enumerations.PublicationStatus status) {
-        Questionnaire questionnaire = new Questionnaire();
-        questionnaire.setId(QuestionnaireServiceTest.QUESTIONNAIRE_ID_1);
-        questionnaire.setStatus(status);
-        return questionnaire;
-    }
 
-    private QuestionnaireModel buildQuestionnaireModel() {
-        return new QuestionnaireModel();
-    }
+
 
     private QuestionModel buildQuestionModel(String linkId) {
-        QuestionModel questionModel = new QuestionModel();
-        questionModel.setLinkId(linkId);
-        return questionModel;
+        var builder = QuestionModel.builder();
+        builder.linkId(linkId);
+        return builder.build();
     }
+
+    private QuestionModel buildQuestionModel() {
+        var builder = QuestionModel.builder();
+        return builder.build();
+    }
+
 }
